# The-Seed-MMORPG-Plattform

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-windows-v2.yml  build.yml  diagnose-repo.yml
docs/: ChangeLog0001.md  ChangeLog0002.md  ChangeLog0003.md  ChangeLog0004.md  ChangeLog0005.md  ChangeLog0006.md  ChangeLog0007.md  ChangeLog0008.md  ChangeLog0009.md  ChangeLog0010.md  ChangeLog0011.md  ChangeLog0012.md  WINDOWS_SETUP.md
docs/Guide/: GITHUB_SETUP.md  PROJECT_SETUP.md  QUICKSTART.md  VS2026_CMAKE_GUIDE.md
docs/Pitch/: INVESTOR_DECK.md  PITCH_DECK.md  TheSeed_Investor_Presentation.md  TheSeed_Pitch_Deck.md
docs/Specification/: SOLO_DEV_ROADMAP.md  TECHNICAL_SPECIFICATION.md  TECH_ARCHITECTURE.md  TheSeed_Solo_Roadmap.md  TheSeed_Technical_Specification.md
src/: texture_streamer.hpp
src/core/: CMakeLists.txt  deferred_renderer.cpp  deferred_renderer.hpp  ecs.cpp  ecs.hpp  events.cpp  events.hpp  game_client.cpp  game_client.hpp  game_server.cpp  game_server.hpp  jobs.cpp  jobs.hpp  material.cpp  material.hpp  material_config.cpp  material_config.hpp  modules.cpp  modules.hpp  net.cpp  net.hpp  profiler.cpp  profiler.hpp  renderer.cpp  renderer.hpp  serialize.cpp  serialize.hpp  shader_manager.cpp  shader_manager.hpp  texture_streamer.cpp  texture_streamer.hpp
src/editor/: main.cpp
src/modules/hello_world/: hello_world.cpp
src/server/: main.cpp
test_data/materials/: custom_shader.yaml  glass.yaml  gold.yaml  rusty_metal.yaml
tests/: test_ecs.cpp  test_events.cpp  test_integration.cpp  test_jobs.cpp  test_material_predefined.cpp  test_material_system.cpp  test_materials.cpp  test_modules.cpp  test_net.cpp  test_profiler.cpp  test_renderer.cpp  test_texture_streamer.cpp
